Minor fix of footer, intro, photo-grid, places-grid adaptability on mobiles.

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,19 +5,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  margin: 92px 286px 0 148px;
+  margin: 92px 442px 0 148px;
   padding: 0;
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-    margin: 92px 0 0 48px;
+    margin: 92px 286px 0 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    margin: 88px 0 0 24px;
+    margin: 88px 24px 0;
   }
 }
 
