--- a/blocks/places-grid/__item/_image/places-grid__item_image.css
+++ b/blocks/places-grid/__item/_image/places-grid__item_image.css
@@ -3,28 +3,29 @@
   margin: 0;
   padding: 0;
   object-fit: cover;
-  width: calc(35.9375vw); /* Примерно равно 460px при ширине экрана 1280px */
-  height: calc(35.9375vw); /* Примерно равно 460px при ширине экрана 1280px */
-  max-width: 460px; /* Чтобы на разрешении больше 1280px картинка не наезжала на текст */
-  max-height: 460px; /* Чтобы на разрешении больше 1280px картинка не наезжала на текст */
+  width: calc(35.9375vw); /* это ≈ 460px на экране 1280px */
+  height: calc(35.9375vw);
+  max-width: 460px; /* Чтобы на разрешении больше 1280px картинка не наезжала на текст. Max-height ниже тоже для этого */
+  max-height: 460px;
 }
 
 @media (max-width: 1024px) {
   .places-grid__item_image {
-    width: calc(43vw); /* Примерно равно 440px при ширине экрана 1024px */
-    height: calc(43vw); /* Примерно равно 440px при ширине экрана 1024px */
+    width: calc(43vw); /* это ≈ 440px на экране 1024px */
+    height: calc(43vw);
   }
 }
 
 @media (max-width: 768px) {
   .places-grid__item_image {
-    width: calc(44.27vw); /* Примерно равно 340px при ширине экрана 768px */
-    height: calc(44.27vw); /* Примерно равно 340px при ширине экрана 768px */
+    width: calc(44.27vw); /* это ≈ 340px на экране 768px */
+    height: calc(44.27vw);
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .places-grid__item_image {
+    min-height: 320px;
     width: 100vw;
     height: 100vw;
   }
