--- a/blocks/places-grid/__item/places-grid__item.css
+++ b/blocks/places-grid/__item/places-grid__item.css
@@ -9,21 +9,22 @@
   list-style-type: none;
   }
 
-  @media (max-width: 1024px) {
-  .places-grid__item {
-    column-gap: 32px;
-  }
-  }
-  
-  @media (max-width: 768px) {
-  .places-grid__item {
-    column-gap: 28px;
-  }
-  }
-  
-  @media (max-width: 320px) {
-  .places-grid__item {
-    grid-template-columns: 1fr;
-    row-gap: 0;
-  }
-  }
+@media (max-width: 1024px) {
+.places-grid__item {
+  column-gap: 32px;
+}
+}
+
+@media (max-width: 768px) {
+.places-grid__item {
+  grid-template-columns: 1fr;
+  column-gap: 28px;
+}
+}
+
+@media (max-width: 767px) {
+.places-grid__item {
+  grid-template-columns: 1fr;
+  row-gap: 0;
+}
+}
